--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*/ Variables de couleur /*/
-body {
+* body {
   font-family: Roboto, sans-serif;
 }
 
@@ -20,6 +20,9 @@ header .titre {
   background-color: #f3f3f3;
   font-size: 16px;
 }
+.formulaire i {
+  margin-right: 10px;
+}
 
 .hero {
   text-align: center;
@@ -37,12 +40,12 @@ header .titre {
 }
 .hero .hero__btn {
   padding: 20px;
+  background-image: linear-gradient(0deg, #9356dc, #ff79da);
 }
 
 .btn {
   text-decoration: none;
   padding: 15px 20px;
-  background-color: #ff79da;
   border-radius: 50px;
   color: white;
   box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
@@ -63,13 +66,20 @@ header .titre {
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.125);
   border-radius: 20px;
   position: relative;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
+}
+.tuto .tuto__elements .tuto__element i {
+  margin: 0 15px 0 10px;
+}
+.tuto .tuto__elements .tuto__element i:hover {
+  color: #9356dc;
 }
 .tuto .tuto__elements .tuto__element .span {
   color: #ffffff;
   justify-content: center;
-  border-radius: 50%;
-  padding: 8px 12px;
+  border-radius: 100%;
+  padding: 6px 9px 4px 9px;
+  margin-top: 5px;
   background-color: #9356dc;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1490196078);
   position: absolute;
@@ -78,7 +88,7 @@ header .titre {
 }
 
 .restaurants {
-  background-color: #f6f6f6;
+  background-color: #ffffff;
   padding: 30px 15px;
 }
 .restaurants .conteneur {
@@ -116,14 +126,48 @@ header .titre {
   align-items: center;
   position: relative;
 }
+.menu .menu__pied i {
+  color: #ffffff;
+}
+.menu .menu__pied i:hover {
+  color: #9356dc;
+}
 .menu .menu__pied .menu__contenue {
   flex: 1;
 }
 .menu .menu__pied .menu__contenue .menu__titre {
-  margin: 0;
+  margin: 0 0 5px 0;
 }
 .menu .menu__pied .menu__contenue .menu__sous-titre {
   margin: 0;
+}
+
+.footer {
+  background-color: #353535;
+  padding: 20px;
+}
+.footer .conteneur__logo {
+  color: #ffffff;
+  font-family: Shrikhand, "cursive";
+  font-size: 25px;
+  padding: 0 0 30px 0;
+}
+.footer .footer__liste {
+  list-style: none;
+  padding: 0;
+  margin: 10px 0 10px 0;
+}
+.footer .footer__liste .footer__sous-liste {
+  margin: 10px 0;
+  margin-top: 10px;
+}
+.footer .footer__liste .footer__sous-liste i {
+  color: #ffffff;
+  margin-right: 10px;
+}
+.footer .footer__liste a {
+  color: #ffffff;
+  text-decoration: none;
 }
 
 /*# sourceMappingURL=style.css.map */
