--- a/style/style.scss
+++ b/style/style.scss
@@ -159,11 +159,13 @@ header {
 .footer {
     background-color: #353535;
     padding: 20px;
+    display: flex;
+    flex-direction: column;
     .conteneur__logo {
         color: #ffffff;
         font-family: Shrikhand, "cursive";
         font-size: 25px;
-        padding: 0 0 30px 0;
+        padding: 0;
     }
     .footer__liste {
         list-style: none;
@@ -172,9 +174,11 @@ header {
         .footer__sous-liste {
             margin: 10px 0;
             margin-top: 10px;
+            display: flex;
+            flex-direction: row;
+            gap: 10px;
             i {
                 color: #ffffff;
-                margin-right: 10px;
             }
         }
         a {
