--- a/style/style.css
+++ b/style/style.css
@@ -1,15 +1,21 @@
+@charset "UTF-8";
 /*/ Variables de couleur /*/
 body {
   font-family: Roboto, sans-serif;
 }
 
 header {
+  display: flex;
+  flex-direction: column;
+  position: relative;
   padding: 15px;
   text-align: center;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1490196078);
 }
 header .titre {
-  font-family: Shrikhand, "cursive";
+  font-family: "Shrikhand", serif;
+  font-weight: 400;
+  font-style: normal;
   margin: 0px;
 }
 
@@ -18,13 +24,16 @@ header .titre {
   justify-content: center;
   padding: 20px 16px;
   background-color: #f3f3f3;
-  font-size: 16px;
+  font-weight: 700;
+}
+.formulaire i {
+  margin-right: 10px;
 }
 
 .hero {
   text-align: center;
   background-color: #fafafa;
-  padding: 30px;
+  padding: 30px 25px;
   display: flex;
   flex-direction: column;
 }
@@ -35,14 +44,17 @@ header .titre {
   margin: 25px 0;
   font-weight: 300;
 }
+.hero a {
+  text-decoration-line: none;
+}
 .hero .hero__btn {
-  padding: 20px;
+  padding: 15px;
+  background-image: linear-gradient(0deg, #9356dc, #ff79da);
+  font-weight: 600;
 }
 
 .btn {
   text-decoration: none;
-  padding: 15px 20px;
-  background-color: #ff79da;
   border-radius: 50px;
   color: white;
   box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
@@ -63,13 +75,23 @@ header .titre {
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.125);
   border-radius: 20px;
   position: relative;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
+}
+.tuto .tuto__elements .tuto__element i {
+  width: 10px;
+  height: auto;
+  margin-right: 15px;
+  color: #7e7e7e;
+}
+.tuto .tuto__elements .tuto__element i:hover {
+  color: #9356dc;
 }
 .tuto .tuto__elements .tuto__element .span {
   color: #ffffff;
   justify-content: center;
-  border-radius: 50%;
-  padding: 8px 12px;
+  border-radius: 100%;
+  padding: 6px 9px 4px 9px;
+  margin-top: 5px;
   background-color: #9356dc;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1490196078);
   position: absolute;
@@ -87,15 +109,15 @@ header .titre {
   -moz-column-gap: 30px;
        column-gap: 30px;
 }
-
-.menu {
+.restaurants .conteneur .menu {
   background-color: #fff;
   border-radius: 16px;
   text-decoration: none;
   position: relative;
   margin-bottom: 30px;
+  cursor: pointer;
 }
-.menu .menu__image {
+.restaurants .conteneur .menu .menu__image {
   width: 100%;
   height: 200px;
   border: 0 solid transparent;
@@ -103,7 +125,7 @@ header .titre {
   -o-object-fit: cover;
      object-fit: cover;
 }
-.menu .menu__badge {
+.restaurants .conteneur .menu .menu__badge {
   padding: 10px;
   background-color: #99e2d0;
   color: #1b6150;
@@ -112,18 +134,110 @@ header .titre {
   right: 20px;
   margin-top: 20px;
 }
-.menu .menu__pied {
+.restaurants .conteneur .menu .menu__pied {
   padding: 15px;
   display: flex;
   align-items: center;
   position: relative;
 }
-.menu .menu__pied .menu__contenue {
+.restaurants .conteneur .menu .menu__pied .menu__contenue {
   flex: 1;
 }
-.menu .menu__pied .menu__contenue .menu__titre {
+.restaurants .conteneur .menu .menu__pied .menu__contenue .menu__titre {
+  margin: 0 0 5px 0;
+}
+.restaurants .conteneur .menu .menu__pied .menu__contenue .menu__sous-titre {
   margin: 0;
 }
-.menu .menu__pied .menu__contenue .menu__sous-titre {
+
+.footer {
+  background-color: #353535;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.footer .conteneur__logo {
+  color: #ffffff;
+  font-family: Shrikhand, "cursive";
+  font-size: 25px;
+  padding: 0;
+}
+.footer .footer__liste {
+  list-style: none;
+  padding: 0;
+  margin: 10px 0 0 0;
+}
+.footer .footer__liste .footer__sous-liste {
+  margin: 10px 0;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+.footer .footer__liste .footer__sous-liste i {
+  margin-right: 7px;
+  width: 10px;
+  height: auto;
+  color: #ffffff;
+}
+.footer .footer__liste a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.menu__image {
+  width: 100%;
+}
+
+.menu__pied i {
+  font-weight: 100;
+}
+.menu__pied i:hover {
+  font-weight: 800;
+  cursor: pointer;
+  background-image: linear-gradient(0deg, #9356dc, #ff79da);
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+.carte__titre {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  margin: 40px 10px 20px 10px;
+}
+.carte__titre .titre {
+  font-family: "Shrikhand", serif;
+  font-weight: 400;
+  font-style: normal;
+  margin: 0px;
+}
+
+.carte {
+  background-color: #f6f6f6;
+  border-radius: 45px;
+  border: solid red 1px;
+}
+
+.carte__entrée--titre {
+  font-family: cursive;
+}
+
+.carte__entrée {
+  display: flex;
+  flex-direction: column;
+  row-gap: 15px;
+}
+
+.carte__entrée--element {
+  padding: 15px;
+  border: solid black 2px;
+  border-radius: 20px;
+}
+.carte__entrée--element .entrée__titre {
+  margin: 0;
+}
+.carte__entrée--element .entrée__sous-titre {
   margin: 0;
 }/*# sourceMappingURL=style.css.map */
