--- a/style/Menu/_layout.scss
+++ b/style/Menu/_layout.scss
@@ -1,11 +1,13 @@
 .carte {
     background-color: #f6f6f6;
-    border-radius: 45px;
+    border-radius: 40px;
     border: solid red 1px;
+    width: 100%;
+    margin-top: -40px;
 }
 
 .carte__entrée--titre {
-    font-family: cursive;
+    margin: 0px;
 }
 
 .carte__entrée {
