--- a/style/Menu/_header.scss
+++ b/style/Menu/_header.scss
@@ -1,11 +1,11 @@
 .carte {
-    background-color: #f6f6f6;
+    background-color: #fafafa;
     .carte__titre {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 20px;
-        margin: 40px 10px 20px 10px;
+        padding: 30px 10px;
+        margin: 0px 10px;
 
         .titre {
             font-family: "Shrikhand", serif;
