--- a/style/Menu/_choix.scss
+++ b/style/Menu/_choix.scss
@@ -1,12 +1,16 @@
 .carte__entrée--element {
     background-color: #fff;
-    padding: 16px;
     display: flex;
-    align-items: flex-end;
     justify-content: space-between;
     font-size: 17px;
     cursor: pointer;
+    margin: 5px 10px;
+    border-radius: 15px;
+    position: relative;
 
+    & .entrée__description {
+        padding: 15px;
+    }
     .entrée__description {
         overflow: hidden;
     }
@@ -14,36 +18,77 @@
         font-size: 17px;
         margin: 0;
         overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
     }
     .entrée__sous-titre {
         margin: 0;
         white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
     .entrée__prix {
-        margin-top: 0px;
+        margin-top: 25px;
         cursor: pointer;
+        padding: 10px;
     }
     .prix_badge {
         display: flex;
-        margin: 10px;
     }
     .entrée__confirmation {
         display: none;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        top: 0px;
+        border-top-right-radius: 15px;
+        border-bottom-right-radius: 15px;
+        .logobg {
+            padding: 20px 20px;
+            position: relative;
+            top: 2px;
+            i {
+                background-color: #fff;
+                padding: 4px;
+                border-radius: 50%;
+                color: $couleur-terciaire;
+                font-weight: 900;
+            }
+        }
+    }
+}
+
+.carte__titre {
+    i:hover {
+        font-weight: 800;
+        cursor: pointer;
+        background-image: linear-gradient(0deg, $couleur-primaire, $couleur-secondaire);
+        -webkit-background-clip: text;
+        color: transparent;
+    }
+}
+.menu__btn {
+    i:hover {
+        font-weight: 800;
+        cursor: pointer;
+        background-image: linear-gradient(0deg, $couleur-primaire, $couleur-secondaire);
+        -webkit-background-clip: text;
+        color: transparent;
     }
 }
 
 .carte__entrée--element:hover {
     .prix_badge {
         display: inline;
+        .entrée__prix {
+        }
     }
     .entrée__confirmation {
         display: inline;
         background-color: $couleur-terciaire;
-
         width: auto;
         i {
-            width: 1/5;
-            height: 100%;
+            color: $couleur-terciaire;
         }
     }
     .prix_badge {
