--- a/style/layout/_footer.scss
+++ b/style/layout/_footer.scss
@@ -24,6 +24,7 @@
                 width: 10px;
                 height: auto;
                 color: #ffffff;
+                font-weight: bold;
             }
         }
         a {
