--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: black;
+  background-color: #eee;
+  font-size: 16px;
 }
 
 header {
@@ -36,7 +39,7 @@ main {
   justify-content: center;
   padding: 20px 16px;
   background-color: #f3f3f3;
-  font-weight: 700;
+  font-weight: 500;
 }
 .formulaire i {
   margin-right: 10px;
@@ -58,6 +61,7 @@ main {
 }
 .hero a {
   text-decoration-line: none;
+  margin: 20px 0;
 }
 .hero .hero__btn {
   padding: 15px;
@@ -74,6 +78,7 @@ main {
 
 .tuto {
   padding: 30px 15px;
+  background-color: #ffffff;
 }
 .tuto .tuto__elements {
   margin: 0;
@@ -87,13 +92,14 @@ main {
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.125);
   border-radius: 20px;
   position: relative;
-  background-color: #ffffff;
+  background-color: #f6f6f6;
 }
 .tuto .tuto__elements .tuto__element i {
   width: 10px;
   height: auto;
   margin-right: 15px;
   color: #7e7e7e;
+  font-weight: 700 !important;
 }
 .tuto .tuto__elements .tuto__element i:hover {
   color: #9356dc;
@@ -115,21 +121,21 @@ main {
   background-color: #f6f6f6;
   padding: 30px 15px;
 }
-.restaurants .conteneur {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
+.restaurants .conteneur__restaurants {
   -moz-column-gap: 30px;
        column-gap: 30px;
+  padding: 0;
 }
-.restaurants .conteneur .menu {
+.restaurants .conteneur__restaurants .menu {
   background-color: #fff;
   border-radius: 16px;
   text-decoration: none;
   position: relative;
   margin-bottom: 30px;
   cursor: pointer;
+  color: inherit;
 }
-.restaurants .conteneur .menu .menu__image {
+.restaurants .conteneur__restaurants .menu .menu__image {
   width: 100%;
   height: 200px;
   border: 0 solid transparent;
@@ -137,7 +143,7 @@ main {
   -o-object-fit: cover;
      object-fit: cover;
 }
-.restaurants .conteneur .menu .menu__badge {
+.restaurants .conteneur__restaurants .menu .menu__badge {
   padding: 10px;
   background-color: #99e2d0;
   color: #1b6150;
@@ -146,19 +152,19 @@ main {
   right: 20px;
   margin-top: 20px;
 }
-.restaurants .conteneur .menu .menu__pied {
+.restaurants .conteneur__restaurants .menu .menu__pied {
   padding: 15px;
   display: flex;
   align-items: center;
   position: relative;
 }
-.restaurants .conteneur .menu .menu__pied .menu__contenue {
+.restaurants .conteneur__restaurants .menu .menu__pied .menu__contenue {
   flex: 1;
 }
-.restaurants .conteneur .menu .menu__pied .menu__contenue .menu__titre {
+.restaurants .conteneur__restaurants .menu .menu__pied .menu__contenue .menu__titre {
   margin: 0 0 5px 0;
 }
-.restaurants .conteneur .menu .menu__pied .menu__contenue .menu__sous-titre {
+.restaurants .conteneur__restaurants .menu .menu__pied .menu__contenue .menu__sous-titre {
   margin: 0;
 }
 
@@ -191,6 +197,7 @@ main {
   width: 10px;
   height: auto;
   color: #ffffff;
+  font-weight: bold;
 }
 .footer .footer__liste a {
   color: #ffffff;
@@ -201,26 +208,19 @@ main {
   width: 100%;
 }
 
-.menu__pied .carte__titre i {
+.menu__pied i {
   font-weight: 100;
-}
-.menu__pied .carte__titre i:hover {
-  font-weight: 800;
-  cursor: pointer;
-  background-image: linear-gradient(0deg, #9356dc, #ff79da);
-  -webkit-background-clip: text;
-  color: transparent;
 }
 
 .carte {
-  background-color: #f6f6f6;
+  background-color: #fafafa;
 }
 .carte .carte__titre {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
-  margin: 40px 10px 20px 10px;
+  padding: 30px 10px;
+  margin: 0px 10px;
 }
 .carte .carte__titre .titre {
   font-family: "Shrikhand", serif;
@@ -229,31 +229,44 @@ main {
 }
 
 .carte {
-  background-color: #f6f6f6;
-  border-radius: 40px;
-  border: solid red 1px;
+  border-top-left-radius: 40px;
+  border-top-right-radius: 40px;
   width: 100%;
-  margin-top: -40px;
-}
-
-.carte__entrée--titre {
-  margin: 0px;
+  margin-top: -50px;
+  position: relative;
 }
 
 .carte__entrée {
   display: flex;
   flex-direction: column;
-  row-gap: 15px;
+}
+.carte__entrée .carte__entrée--titre {
+  font-size: 16px;
+  font-weight: 100;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 0;
+}
+.carte__entrée .barre__verte {
+  width: 20px;
+  padding: 2px 10px;
+  background-color: #99e2d0;
+  margin-left: 10px;
+  margin-bottom: 5px;
 }
 
 .carte__entrée--element {
   background-color: #fff;
-  padding: 16px;
   display: flex;
-  align-items: flex-end;
   justify-content: space-between;
   font-size: 17px;
   cursor: pointer;
+  margin: 5px 10px;
+  border-radius: 15px;
+  position: relative;
+}
+.carte__entrée--element .entrée__description {
+  padding: 15px;
 }
 .carte__entrée--element .entrée__description {
   overflow: hidden;
@@ -262,21 +275,59 @@ main {
   font-size: 17px;
   margin: 0;
   overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .carte__entrée--element .entrée__sous-titre {
   margin: 0;
   white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .carte__entrée--element .entrée__prix {
-  margin-top: 0px;
+  margin-top: 25px;
   cursor: pointer;
+  padding: 10px;
 }
 .carte__entrée--element .prix_badge {
   display: flex;
-  margin: 10px;
 }
 .carte__entrée--element .entrée__confirmation {
   display: none;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: 0px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+.carte__entrée--element .entrée__confirmation .logobg {
+  padding: 20px 20px;
+  position: relative;
+  top: 2px;
+}
+.carte__entrée--element .entrée__confirmation .logobg i {
+  background-color: #fff;
+  padding: 4px;
+  border-radius: 50%;
+  color: #99e2d0;
+  font-weight: 900;
+}
+
+.carte__titre i:hover {
+  font-weight: 800;
+  cursor: pointer;
+  background-image: linear-gradient(0deg, #9356dc, #ff79da);
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+.menu__btn i:hover {
+  font-weight: 800;
+  cursor: pointer;
+  background-image: linear-gradient(0deg, #9356dc, #ff79da);
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
 .carte__entrée--element:hover .prix_badge {
@@ -288,9 +339,86 @@ main {
   width: auto;
 }
 .carte__entrée--element:hover .entrée__confirmation i {
-  width: 1/5;
-  height: 100%;
+  color: #99e2d0;
 }
 .carte__entrée--element:hover .prix_badge {
   display: flex;
+}
+
+@media (min-width: 1000px) {
+  .menu__image {
+    width: 100%;
+    max-height: 400px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .tuto {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    padding: 10px 150px;
+  }
+  .tuto .tuto__elements {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr) !important;
+    gap: 10px;
+    max-width: 1000px;
+  }
+  .tuto .tuto__elements .tuto__element {
+    padding-right: 0;
+  }
+  .restaurants {
+    padding: 10px 150px;
+  }
+  .conteneur__restaurants {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr) !important;
+  }
+  .footer {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 20px;
+    padding: 10px;
+  }
+  .footer .conteneur__logo {
+    margin: 20px;
+    margin-top: 55px;
+    font-size: 20px;
+  }
+  .footer .footer__liste {
+    display: flex;
+    gap: 20px;
+    margin-top: 55px;
+    margin-left: 30px;
+  }
+}
+.conteneur__restaurants {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+}
+
+@media (min-width: 1000px) {
+  header {
+    background-color: #fff;
+  }
+}
+@media (min-width: 1000px) {
+  main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .carte {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-right: 100px;
+    padding-left: 100px;
+    max-width: 600px;
+    margin: auto;
+    margin-top: -50px;
+    position: relative;
+  }
 }/*# sourceMappingURL=style.css.map */
