--- a/style/Menu/_layout.scss
+++ b/style/Menu/_layout.scss
@@ -16,6 +16,7 @@
         margin-left: 10px;
         margin-right: 10px;
         margin-bottom: 0;
+        transition: 1s;
     }
     .barre__verte {
         width: 20px;
