--- a/style/Components/_formulaires.scss
+++ b/style/Components/_formulaires.scss
@@ -1,4 +1,5 @@
 .formulaire {
+    margin-left: 10px;
     display: flex;
     justify-content: center;
     padding: 20px 16px;
@@ -7,4 +8,14 @@
     i {
         margin-right: 10px;
     }
+}
+
+.placeholder {
+    border: none;
+    font-weight: 700;
+    font-family: Roboto, sans-serif;
+    color: black;
+    font-size: 18px;
+    background-color: transparent;
+    width: 156px;
 }
