--- a/style/Components/_tuto.scss
+++ b/style/Components/_tuto.scss
@@ -2,41 +2,43 @@
     padding: 30px 15px;
     background-color: #ffffff;
     display: flex;
+    flex-direction: column;
+    .conteneur {
+        .tuto__elements {
+            margin: 0;
+            padding: 0;
+            list-style: none;
 
-    .tuto__elements {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-
-        .tuto__element {
-            padding: 25px;
-            margin: 16px 0 16px 12px;
-            margin-top: 16px;
-            box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.125);
-            border-radius: 20px;
-            position: relative;
-            background-color: #f6f6f6;
-            i {
-                width: 10px;
-                height: auto;
-                margin-right: 15px;
-                color: #7e7e7e;
-                font-weight: 700 !important;
-            }
-            i:hover {
-                color: $couleur-primaire;
-            }
-            .span {
-                color: #ffffff;
-                justify-content: center;
-                border-radius: 100%;
-                padding: 6px 9px 4px 9px;
-                margin-top: 5px;
-                background-color: $couleur-primaire;
-                box-shadow: 0px 4px 15px 0px #00000026;
-                position: absolute;
-                left: -16px;
-                top: 16px;
+            .tuto__element {
+                padding: 25px;
+                margin: 16px 0 16px 12px;
+                margin-top: 16px;
+                box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.125);
+                border-radius: 20px;
+                position: relative;
+                background-color: #f6f6f6;
+                i {
+                    width: 10px;
+                    height: auto;
+                    margin-right: 15px;
+                    color: #7e7e7e;
+                    font-weight: 700 !important;
+                }
+                i:hover {
+                    color: $couleur-primaire;
+                }
+                .span {
+                    color: #ffffff;
+                    justify-content: center;
+                    border-radius: 100%;
+                    padding: 6px 9px 4px 9px;
+                    margin-top: 5px;
+                    background-color: $couleur-primaire;
+                    box-shadow: 0px 4px 15px 0px #00000026;
+                    position: absolute;
+                    left: -16px;
+                    top: 16px;
+                }
             }
         }
     }
