--- a/style/Responsive/_desktop.scss
+++ b/style/Responsive/_desktop.scss
@@ -1,4 +1,4 @@
-@media (min-width: 1000px) {
+@media (min-width: 1100px) {
     .menu__image {
         width: 100%;
         max-height: 400px;
@@ -12,13 +12,19 @@
         align-content: center;
         padding: 10px 150px;
 
-        .tuto__elements {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr) !important;
-            gap: 10px;
-            max-width: 1000px;
-            .tuto__element {
-                padding-right: 0;
+        .conteneur {
+            max-width: 1200px;
+            margin: auto;
+            width: 100%;
+
+            .tuto__elements {
+                display: grid;
+                grid-template-columns: repeat(3, 1fr) !important;
+                gap: 30px;
+
+                .tuto__element {
+                    padding-right: 0;
+                }
             }
         }
     }
@@ -47,6 +53,70 @@
             gap: 20px;
             margin-top: 55px;
             margin-left: 30px;
+        }
+    }
+
+    //section restaurant
+    .restaurants {
+        margin: 0;
+
+        align-content: center;
+        padding: 10px 150px;
+
+        .conteneur {
+            column-gap: 30px;
+            max-width: 1200px;
+            margin: auto;
+            .cards {
+                padding: 0;
+                list-style: none;
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                column-gap: 30px;
+                .card {
+                    background-color: #fff;
+                    border-radius: 16px;
+                    text-decoration: none;
+                    position: relative;
+                    margin-bottom: 30px;
+                    cursor: pointer;
+                    color: inherit;
+                    width: auto;
+
+                    .menu__image {
+                        width: 100%;
+                        height: 200px;
+                        border: 0 solid transparent;
+                        border-radius: 15px 15px 0 0;
+                        object-fit: cover;
+                    }
+                    .menu__badge {
+                        padding: 10px;
+                        background-color: #99e2d0;
+                        color: #1b6150;
+                        border-radius: 5px;
+                        position: absolute;
+                        right: 20px;
+                        margin-top: 20px;
+                    }
+                    .menu__pied {
+                        padding: 15px;
+                        display: flex;
+                        align-items: center;
+                        position: relative;
+
+                        .menu__contenue {
+                            flex: 1;
+                            .menu__titre {
+                                margin: 0 0 5px 0;
+                            }
+                            .menu__sous-titre {
+                                margin: 0;
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
 }
